# Personal-Projects

./: README.md
Uni_Related/Distributed_Systems/ds-projectMaven2/: pom.xml
Uni_Related/HardwarePraktikumMinimaXMachine/: Guide to project  data_encrypted  key
Uni_Related/ProgrammierPraktikum/Exercise01/: FragenAnt.txt  main  main.cpp
Uni_Related/ProgrammierPraktikum/Exercise01/Calculator/: Calculator  calc.cpp
Uni_Related/ProgrammierPraktikum/Exercise02/csvParser/: CMakeLists.txt  csv-file.csv
Uni_Related/ProgrammierPraktikum/Exercise02/csvParser/src/: Parser  main.cpp  parser.cpp  parser.h
Uni_Related/ProgrammierPraktikum/Exercise02/csvParser/test/: test.cpp
Uni_Related/ProgrammierPraktikum/Exercise02/nutriScore/: CMakeLists.txt
Uni_Related/ProgrammierPraktikum/Exercise03/asciimap/: CMakeLists.txt  asciiart.txt
Uni_Related/ProgrammierPraktikum/Exercise03/graph/: CMakeLists.txt
Uni_Related/ProgrammierPraktikum/Exercise04/: Answers.txt
Uni_Related/ProgrammierPraktikum/Exercise04/newPaste/: CMakeLists.txt  examples.txt  numbers.txt
Uni_Related/ProgrammierPraktikum/Exercise05/floorplanning/: CMakeLists.txt  optimal-solution.txt
Uni_Related/ProgrammierPraktikum/Exercise05/floorplanning/src/: Floor  cell.cpp  cell.h  floor.cpp  floor.h  main.cpp
Uni_Related/Python_Based_Projects/Pacman game AI search/: Explained
Uni_Related/Python_Based_Projects/Pacman game AI search/proj1-search-python3/: search.py
Uni_Related/Python_Based_Projects/PythonDatabase/: main.py
Uni_Related/Python_Based_Projects/PythonDatabase/imdb/: imdb.db  imdb.db-journal
(+23 files in other folders)
